# pyoupyou

./: .coveragerc  .gitignore  .pep8  CHANGELOG.md  Pipfile  README  README.md  dev-requirements.txt  i18n.sh  manage.py  pre-release.sh  pyproject.toml  requirements.txt  update-requirements-txt.sh
.circleci/: config.yml
.github/workflows/: django.yml
interview/: admin.py  apps.py  decorators.py  factory.py  feeds.py  filters.py  forms.py  models.py  serializers.py  tests.py  views.py  widgets.py
interview/management/commands/: account_Creation.py  anonymize.py  batch_update_state.py  create_dev_dataset.py  delete_dataset.py  reminder.py
interview/migrations/: 0001_initial.py  0002_auto_20170401_1257.py  0002_auto_20170404_2032.py  0002_auto_20170517_1542.py  0003_auto_20170401_1706.py  0003_auto_20170408_1354.py  0003_auto_20171114_2233.py  0004_auto_20170401_2018.py  0004_auto_20180315_1832.py  0004_interview_interviewers.py  0005_auto_20170402_0905.py  0005_auto_20170408_2254.py  0005_auto_20180325_2052.py  0006_auto_20170402_1002.py  0006_auto_20170410_0710.py  0006_auto_20180526_0938.py  0007_auto_20170412_2110.py  0007_auto_20180526_0944.py  0008_auto_20170414_1908.py  0008_auto_20180526_1140.py  0009_auto_20170414_2010.py  0009_auto_20190613_1737.py  0010_auto_20170414_2010.py  0010_auto_20191018_1537.py  0011_auto_20170416_1619.py  0011_process_other_informations.py  0012_auto_20170516_2226.py  0012_auto_20191212_1053.py  0013_auto_20170516_2330.py  0013_auto_20200224_1036.py  0014_auto_20200709_1608.py  0014_auto_20201201_1832.py  0014_auto_20201210_1117.py  0015_candidate_anonymization.py  0016_auto_20210916_1808.py  0016_auto_20211019_1056.py  0017_auto_20210916_1808.py  0017_auto_20211019_1056.py  0018_interview_prequalification.py  0019_auto_20211128_1257.py  (+21 more)
interview/static/: pivotable.js
interview/templates/: index.html  interview.html  interview_minute.html  list_processes.html  new_candidate.html  process_detail.html
interview/templates/interview/: _pivotable_header.html  _tables.html  active-sources.html  base.html  candidate.html  dashboard.html  gantt.html  index.html  interview.html  interview_minute.html  interview_minute_form.html  interviewers-load.html  kanban.html  list_interviews.html  list_processes.html  new_candidate.html  offers.html  pivotable.html  process_detail.html  search_results.html  seekube_import.html  select_or_create_offer.html  single_table.html  (+8 more)
interview/templatetags/: commonmark.py
pyoupyou/: middleware.py  settings.py  urls.py  wsgi.py
pyoupyou/settings/: __init__.py  common.py  dev.py  local-test.py  local.py  local.py.ci  local.py.example  prod.py
ref/: admin.py  apps.py  factory.py  filters.py  models.py  tests.py
ref/migrations/: 0001_initial.py  0002_auto_20190613_1737.py  0002_subsidiary_responsible.py  0003_remove_consultant_productive.py  0004_alter_consultant_options.py  0005_auto_20221122_1445.py  0005_consultant_limited_to_source.py  0005_consultant_to_source.py  0006_alter_consultant_privilege.py  0006_consultant_privilege.py  0007_alter_consultant_limited_to_source.py  0007_auto_20230116_1656.py  0007_subsidiary_informed.py  0008_auto_20230116_1656.py  0008_pyoupyouuser_token.py  0009_auto_20230116_1656.py  0009_auto_20240109_1120.py  0010_alter_pyoupyouuser_trigramme.py  0010_subsidiary_show_in_report_by_default.py  0011_merge_20240715_1041.py  0012_merge_20241021_1741.py  0013_remove_subsidiary_show_in_report_by_default_and_more.py  0014_subsidiary_show_in_report_by_default.py  0015_delete_consultant.py  0015_move_consultant_data.py  0016_delete_consultant.py
(+24 files in other folders)
