[tool.black]
line-length = 120

[tool.poetry]
name = "pyoupyou"
version = "1.19.0"
description = "ATS"
authors = [
    "Benjamin Port <benjamin.port@enioka.com>",
    "Arnaud Chirat <arnaud.chirat@enioka.com>",
    "Thomas Cordival <thomas.cordival@enioka.com>",
    "Arnaud Baradat <arnaud.baradat@enioka.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">= 3.9, <3.11"
django-bootstrap-static = ">=3.3.7,<3.4"
django-crispy-forms = "==1.14.0"
django-select2 = "==8.1.1"
django-extensions = "==3.2.1"
django-tables2 = "==2.5.3"
django-ical = "==1.8.3"
django-bleach = "==3.0.1"
django-split-settings = "==1.2.0"
requests = '==2.28.2 '
django-filter = "==22.1"
plotly = "==4.8.2"
numpy = "==1.24.1"
pytz = "==2022.7.1"
pandas = "==1.5.3"
django = "==3.2.18"
urllib3 = "==1.26.15"
markdown-it-py = "^2.2.0"
djangorestframework = "^3.14.0"

[tool.poetry.group.dev.dependencies]
black = "==22.8.0"
django-debug-toolbar = "==2.2.1"
factory-boy = "==3.1.0"
tzlocal = "*"
coverage = "*"
django-debug-toolbar-user-panel = {git = "https://github.com/Napoleon-Black/django-debug-toolbar-user-panel.git",rev = "1481b04e0cbbf7db35bf43061883535ef25892f5"}
django-debug-toolbar-request-history = "==0.1.3"

